# robogamescode

./: Assem1urdf.csv  Assem1urdf.urdf  CMakeLists.txt  README.md  arm.STL  base.STL  claw1.STL  display.launch  elbow.STL  gazebo.launch  hand.STL  joint.STL  joint_names_Assem1urdf.yaml  package.xml  panda_build.sh  publish_random_target_pose.py  publish_random_target_pose.sh  test.py
DingoQuadruped/dingo_ws/install/: local_setup.sh  setup.bash  setup.sh
DingoQuadruped/dingo_ws/log/: latest_build
car_ws/: run_gazebo_world.sh
car_ws/install/: local_setup.sh  setup.sh  setup.zsh
car_ws/log/: latest_build
car_ws/src/mini_car_bot/config/: gaz_ros2_ctl_use_sim.yaml
car_ws/src/mini_car_bot/description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro
car_ws/src/mini_car_bot/launch/: launch_sim.launch.py  rsp.launch.py
car_ws/src/mini_car_bot/worlds/: prev_empty.world  simple.world
car_ws/src/my_robot_pkg/: package.xml  setup.py
car_ws/src/my_robot_pkg2/: CMakeLists.txt
dingo/dingo_ws/install/: local_setup.sh  setup.sh
dingo/dingo_ws/log/: latest_build
dingo_ws/install/: local_setup.sh  setup.sh  setup.zsh
dingo_ws/log/: latest_build
install/: local_setup.sh  setup.sh
install/cobot_test/lib/cobot_test/: micro_ros_bridge_interface  perception  robot_kinematics  test_custom_cobot_node  test_random_cobot_node
install/cobot_test/share/cobot_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  (+1 more)
leg1_ws/: README.md  convert_xacro_urdf_sdf.sh  run_gazebo_leg.sh  run_rviz_leg.sh
leg1_ws/install/: local_setup.sh  setup.bash  setup.sh
leg1_ws/leg1_description/: package.xml  setup.cfg  setup.py
leg1_ws/leg1_description/launch/: display.launch.py  gazebo.launch.py
leg1_ws/leg1_description/meshes/: lowerleg_1.stl  upperleg_1.stl
leg1_ws/leg1_description/urdf/: leg1.gazebo  leg1.trans  leg1.xacro
leg1_ws/log/: latest_build
log/: latest_build
src/cobot_test/: CMakeLists.txt
src/cobot_test/src/: checking_collision.cpp  micro_ros_bridge_interface.cpp  perception.cpp  robot_kinematics.cpp  robot_model_loader_and_state_tutorial.cpp  test_custom_cobot.cpp  test_random_cobot.cpp
src/panda_robot_moveit_config/: .setup_assistant  CMakeLists.txt
src/panda_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  ros2_controllers.yaml
src/panda_robot_moveit_config/launch/: demo.launch.py  display.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot_model_and_robot_state_tutorial.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
teensy_ino_code/teensy_coordinator/: Constants.h  micro_ros_subscriber.ino  teensy_to_servo_pipeline.ino
world/: model.config  model.sdf
world/meshes/: block.stl  red1.stl  red2.stl  world1.stl  yellow1.stl  yellow3.stl  yellow5.stl
(+146 files in other folders)
